--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   },
   "dependencies": {
     "@iconify/vue": "^3.1.4",
-    "@vueuse/core": "^7.7.0",
+    "@vueuse/nuxt": "^7.7.1",
     "canvas-confetti": "^1.5.1",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.9.0",
