--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "handle.xuanyan.ws",
-  "version": "0.0.0",
+  "version": "0.1.0",
   "private": true,
   "scripts": {
     "dev": "nuxi dev",
@@ -27,6 +27,7 @@
     "@types/canvas-confetti": "^1.4.2",
     "@types/file-saver": "^2.0.5",
     "@types/seedrandom": "^3.0.2",
+    "@types/semver-compare": "^1.0.1",
     "eslint": "^8.10.0",
     "eslint-plugin-nuxt": "^3.1.0",
     "eslint-plugin-vue": "^8.5.0",
