--- a/package.json
+++ b/package.json
@@ -10,15 +10,15 @@
   },
   "dependencies": {
     "@iconify/vue": "^3.1.4",
-    "@vueuse/nuxt": "^7.7.1",
+    "@vueuse/core": "^7.7.1",
     "canvas-confetti": "^1.5.1",
     "file-saver": "^2.0.5",
     "html-to-image": "^1.9.0",
-    "nuxt-windicss": "^2.2.7",
+    "nuxt-windicss": "^2.2.8",
     "nuxt3": "latest",
     "seedrandom": "^3.0.5",
     "semver-compare": "^1.0.0",
-    "windicss": "^3.5.0"
+    "windicss": "^3.5.1"
   },
   "devDependencies": {
     "@nuxtjs/eslint-config": "^8.0.0",
