--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -240,7 +240,7 @@
     "@typescript-eslint/default-param-last": "error",
     "@typescript-eslint/explicit-function-return-type": "off",
     "@typescript-eslint/explicit-module-boundary-types": "off",
-    "@typescript-eslint/func-call-spacing": "off",
+    "@typescript-eslint/func-call-spacing": "warn",
     "@typescript-eslint/indent": [
       "warn",
       2
